--- a/style.css
+++ b/style.css
@@ -2012,11 +2012,9 @@ a.panelctabutton:hover {
 
 .nocolpqdl, .nocolpadl {
 	padding-left: 0;
-	padding-right: 8px;
 }
 
 .nocolpadr {
-	padding-left: 8px;
 	padding-right: 0;
 }
 
@@ -2652,15 +2650,18 @@ display: none;
 
 	@media only screen and (max-width: 1224px) {
 	.entry-content,
-	.portfoliowrap,
 	.entry-header,
 	.entry-footer {
-		padding-left: 1em;
-		padding-right: 1em;
+		padding-left: 15px;
+		padding-right: 15px;
 	}
 
 .homefeaturetext p {
 	font-size: 1.1em;
+}
+
+.serviceitem .itembottom img {
+    max-width: 47px;
 }
 
 }
@@ -2685,7 +2686,7 @@ display: none;
 
 }
 
-@media only screen and (max-width: 991px) {
+@media only screen and (max-width: 992px) {
 
 .homefeaturetext {
 	min-height: auto;
@@ -2739,7 +2740,7 @@ display: none;
 
 	.site-title img {
 	    float: left;
-	    margin-left: 28px;
+	    margin-left: 12px;
 	    width: 76px;
 	}
 
@@ -2969,7 +2970,19 @@ width: 100%;
 
 }
 
-@media only screen and (max-width: 400px) {
+@media only screen and (max-width: 480px) {
+
+	.comment-navigation .nav-previous,
+	.paging-navigation .nav-previous,
+	.post-navigation .nav-previous {
+		width: 100%;
+		margin-bottom: 1em;
+	}
+	.comment-navigation .nav-next,
+	.paging-navigation .nav-next,
+	.post-navigation .nav-next {
+		width: 100%;
+	}
 
 }
 
@@ -2992,12 +3005,30 @@ and (max-width : 320px) {
 /* Styles */
 }
 
-/* iPads (portrait and landscape) ----------- */
+/* xxxxxxxxxxxx ----------- */
 @media only screen
-and (min-device-width : 768px)
-and (max-device-width : 1024px) {
+and (min-width : 768px)
+and (max-width : 992px) {
 
-		}
+	.wrap-small {
+				display: block;
+				margin: 0 auto;
+				max-width: 74%;
+			}
+
+	.site-header {
+		background-color: #03A9F4;
+	}
+
+}
+
+
+		/* iPads (portrait and landscape) ----------- */
+		@media only screen
+		and (min-device-width : 768px)
+		and (max-device-width : 1024px) {
+
+}
 
 /* iPads (landscape) ----------- */
 @media only screen
@@ -3033,7 +3064,7 @@ and (min-width : 1224px) {
 
 
 		@media only screen
-		and (min-width : 991px) {
+		and (min-width : 992px) {
 
 			#menu-top-menu li.menusmall {
 				display: none;
@@ -3147,7 +3178,7 @@ display: inline;
 
 
 
-			@media only screen and (max-width: 991px) {
+			@media only screen and (max-width: 992px) {
 
 			.nocolpadr, .nocolpqdr,
 			.nocolpadl, .nocolpqdl,
@@ -3207,18 +3238,6 @@ display: inline;
 
 		#authorarea h3 {
 		    padding: 10px 0 20px;
-		}
-
-		.comment-navigation .nav-previous,
-		.paging-navigation .nav-previous,
-		.post-navigation .nav-previous {
-			width: 100%;
-			margin-bottom: 1em;
-		}
-		.comment-navigation .nav-next,
-		.paging-navigation .nav-next,
-		.post-navigation .nav-next {
-			width: 100%;
 		}
 
 		.browser {
@@ -3526,7 +3545,7 @@ color: #ffffff;
 float: right;
 padding: 10px;
 margin-top: 15px;
-margin-right: 30px;
+margin-right: 15px;
 }
 
 #content iframe {
@@ -3680,4 +3699,8 @@ margin-bottom: 1.5em;
 
 .taxonomy-description {
 	text-align: center;
+}
+
+.category article h2 {
+	font-weight: bold;
 }
